// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-l-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.02)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#333333"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-l-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.02)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#333333"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-l-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.01)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#646466",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#646466"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-l-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.01)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#646466",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#646466"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.02)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#333333"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.02)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#333333"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.01)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#646466",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#646466"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.01)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#646466",
            "fontFamily": "Inter-Medium",
            "fontSize": 14,
            "fontWeight": "500",
            "lineHeight": 20,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#646466"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.02)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#333333"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.02)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#333333"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.01)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#646466",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#646466"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix baseline (variant x size x {default,disabled} x modes) standard-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.01)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#646466",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#646466"
        width={16}
      />
    </View>
  </View>
</View>
`;

exports[`Dropdown — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) standard-s-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    collapsable={false}
  >
    <View
      accessibilityLabel="Alpha"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "alignSelf": "flex-start",
            "backgroundColor": "rgba(51, 51, 51, 0.02)",
            "borderRadius": 8,
            "flexDirection": "row",
            "gap": 4,
            "minHeight": 44,
            "paddingHorizontal": 8,
            "paddingVertical": 4,
          },
          undefined,
        ]
      }
      testID="ui-dropdown"
    >
      <Text
        style={
          {
            "color": "#333333",
            "fontFamily": "Inter-Medium",
            "fontSize": 12,
            "fontWeight": "500",
            "lineHeight": 16,
          }
        }
      >
        Alpha
      </Text>
      <SvgMock
        height={16}
        stroke="#333333"
        width={16}
      />
    </View>
  </View>
</View>
`;
